#90 Scrollbar doesn't scroll to the top - header should be fixed

--- a/resources/styles/common.css
+++ b/resources/styles/common.css
@@ -261,6 +261,9 @@ div.button-column {
 }/* div.button-column */
 
 
+div.scroll-panel { overflow: auto }
+
+
 /********/
 
 
